# simple-mixture-models

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirments.txt
scripts/: linear.py  sin.py
