[tool.poetry]
name = "simple-mixture-models"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
jax = "^0.1.75"
jaxlib = "^0.1.52"
matplotlib = "^3.3.0"
typer = "^0.3.1"
debugpy = "^1.0.0-beta.12"
elegy = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
